# umf

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  umf.udml.yaml  urp_operations.json
docs/: umf-internal-format.md
src/: lib.rs  udml_spec.rs  urp_handler.rs
src/chatml/: mod.rs  tests.rs
src/events/: envelope.rs  message.rs  mod.rs  tests.rs  tool_call.rs  tool_result.rs  traits.rs
src/streaming/: accumulator.rs  mod.rs  tests.rs  types.rs
