[package]
name = "umf"
version = "0.2.0"
edition = "2021"
authors = ["Simpaticoder Contributors"]
description = "Universal Message Format (UMF) - Provider-agnostic message representation for LLM interactions with ChatML formatting support"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/podtan/umf"
homepage = "https://umf.podtan.com"
documentation = "https://docs.rs/umf"
keywords = ["llm", "message-format", "openai", "anthropic", "provider-agnostic"]
categories = ["data-structures", "encoding"]
rust-version = "1.70"

[workspace]
# This is a standalone crate, not part of a workspace

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiktoken-rs = "0.5"
futures-util = { version = "0.3", optional = true }
# UDML support for runtime URP handling (using local path for development)
udml = { path = "../udml", optional = true }
chrono = { version = "0.4", optional = true }
ulid = { version = "1.0", optional = true }

[build-dependencies]
# UDML for compile-time specification validation (using local path for development)
udml = { path = "../udml" }
serde_json = "1.0"

[features]
default = []
streaming = ["futures-util"]
# Enable UDML/URP support for standardized message handling
udml = ["dep:udml", "dep:chrono", "dep:ulid"]

[dev-dependencies]
# No additional dev dependencies needed for now
